add first name and last name to user and remove name
