# src/controllers/helper/selectors.ts
@@ -1,4 +1,4 @@
-export const USER_SELECTOR = "_id name email photoUrl birthday ";
+export const USER_SELECTOR = "_id firstName lastName email photoUrl birthday ";
 export const POST_SELECTOR = "_id type text user likes ";
 export const COMMENT_SELECTOR = "_id type text user post ";
 export const MESSAGE_SELECTOR =
